--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,15 @@
 {
   "printWidth": 80,
   "useTabs": false,
+  "tabWidth": 4,
   "semi": true,
   "singleQuote": true,
   "trailingComma": "es5",
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "proseWrap": "always"
+  "proseWrap": "always",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
